--- a/src/components/pages/home/Recomendations/Card/Card.module.css
+++ b/src/components/pages/home/Recomendations/Card/Card.module.css
@@ -64,3 +64,37 @@
 
 }
 
+
+@media only screen and (max-width: 1840px) {
+    .card{
+        height:470px;
+        min-width: 230px;
+        max-width:230px;
+        padding: 30px;
+        padding-bottom: 0;
+    
+        border: 1.5px rgba(177, 174, 174, 0.432) solid;
+    }
+    .image_item{
+    object-fit:fill;
+    width:100%;
+    height: 370px;
+
+}
+.image_container{
+    width:100%;
+    height:370px;
+    
+}
+.card_inner{
+    height: 430px;
+    width:100%;
+   
+    z-index: 2000;
+    position: relative;
+    
+    
+   
+}
+
+}
