removed underline + logo set size

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -48,6 +48,10 @@
     padding-left: 10%;
     
 }
+.logo_item{
+    margin-top:5px;
+    width:110px;
+}
 
 .logo_texts{
     text-align: left;
@@ -64,7 +68,7 @@
 }
 .page_title_text{
     font-size: 29px;
-    font-family: "normal normal normal 56px/1.4em barlow-medium,barlow,sans-serif";
+    font-family:  barlow, sans-serif;
     line-height:1.2em;
     letter-spacing:0.05em;
 }
@@ -77,7 +81,7 @@
     font-size: 11px;
     line-height:1.1em;
     letter-spacing:0.23em;
-    font-family: "barlow-medium,barlow,sans-serif";
+    font-family:  barlow, sans-serif;
 }
 
 
@@ -98,7 +102,7 @@
     margin-right: 20px;
     white-space: nowrap;
     color: black;
-    font-family: "Sabon" , "serif"
+    font-family: barlow, sans-serif
 }
 .nav_list_item:hover{
     color: rgb(92, 92, 92);
