--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -53,7 +53,7 @@
     text-align: left;
     text-decoration: none;
     list-style-type: none;
-    font-family: "Sabon", serif;
+    font-family:  barlow, sans-serif;
     color: #000000;
     font-size: 16px;
     
