--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,8 +7,10 @@
 .follow_container{
     font-family: barlow-medium,barlow,sans-serif;
     font-size: 30px;
-    text-align: left;
+    text-align: center;
     padding-top: 45px;
+    line-height: 70px;
+   font-weight: 100;
     
 }
 
@@ -59,42 +61,63 @@
 .social_media_list_item{
     display: inline-block;
     text-decoration: none;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+
     
+}
+.social_media_item_image{
+    height:60px;
+    width: 60px;
+}
+
+.form_title{
+  
+    font-family: barlow-medium,barlow,sans-serif;
+    font-size: 24px;
+    text-align: center;
+    padding-top: 70px;
+    line-height: 70px;
+    font-weight: 100;
+
 }
 
 .form_container{
-    width: 211px;
-    height: 30px;
+    width:500px;
     margin: 0 auto;
-}
-.form_container:hover{
-    background-color: rgb(1, 80, 1);
+    display:  flex;
+    margin-bottom: 35px;
 }
 
+
 .form_item{
-    width: 100%;
+    height:45px;
+    width:300px;
+    line-height: 50px;
     background: transparent;
     text-decoration: none;
+    border: 1px solid black;
+    border-radius: 2px 0px 0px 2px;
 }
 
 .form_button{
-    width: 209px;
-    height: 40px;
+    width: 150px;
+    height:50px;
     
+    font-size: 20px;
     text-decoration: none;
     background-color: black;
+    border: 1px solid black;
+    border-radius: 0px 2px 2px 0px;
     border: none;    
+    color: white;
 }
 
 .form_button:hover{
-    background-color: rgb(1, 80, 1);
+    background-color: rgb(150, 131, 151);
+    cursor: pointer;
 }
-.form_button_text{
-    color: white;
-    
-}
+
 
 .email_link{
     text-decoration: none;
@@ -112,15 +135,14 @@
     padding-top: 40px;
     padding-bottom:30px;
     height: auto;
-    font-size:16px;
-    font-family: 'courier new',courier-ps-w01,courier-ps-w02,courier-ps-w10,monospace;
+    font-size:24px;
+    word-spacing: 2px;
+    font-family: barlow-medium,barlow,sans-serif;
 }
 
 
 @media only screen and (min-width:980px){
-    .follow_container{
-        padding-left:5%;
-    }
+    
 
     
     
