--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -99,10 +99,15 @@
     border: 1px solid black;
     border-radius: 2px 0px 0px 2px;
 }
-
+.form_item:focus{
+    outline:none;
+    -webkit-box-shadow:inset 0px 0px 0px 1px #000;
+    -moz-box-shadow:inset 0px 0px 0px 1px #000;
+    box-shadow:inset 0px 0px 0px 1px #000;
+}
 .form_button{
     width: 150px;
-    height:50px;
+    height:49px;
     
     font-size: 20px;
     text-decoration: none;
