--- a/src/components/pages/mission/Mission.module.css
+++ b/src/components/pages/mission/Mission.module.css
@@ -20,21 +20,39 @@
     margin-bottom: 80px;
 }
 
+.white_box_image {
+    height: 1250px;
+    width: 100%;
+
+}
+
 .mission_info_container {
- background-color: white;
- border-radius: 10px;
- padding: 30px 10%;
+
+    position: relative;
+    text-align: center;
+
 }
 
 .mission_info {
     font-family: barlow-medium,barlow,sans-serif;
-    font-size: 36px;
+    font-size: 2.5vw;
+    width: 80%;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media only screen and (max-width: 1260px) {
     .mission_info {
         font-family: barlow-medium,barlow,sans-serif;
         font-size: 30px;
+    }
+    .white_box_image {
+        height: 1100px;
+        width: 100%;
+    
     }
 }
 
