--- a/src/components/pages/services/Services.module.css
+++ b/src/components/pages/services/Services.module.css
@@ -2,7 +2,8 @@
     padding: 50px 0px;
     
 
-    background-image: url('../../../../public/pictures/services/services-background.svg')
+    background-image: url('../../../../public/pictures/services/services-background.png');
+    background-size: 2200px ;
 }
 
 
