home page recomendations and best sellers changes

--- a/src/components/pages/home/Home.module.css
+++ b/src/components/pages/home/Home.module.css
@@ -1,17 +1,21 @@
 .home {
     background-image: url('../../../../public/pictures/home/homepage-background.webp');
+    background-size: 2700px;
+    padding-bottom: 120px;
+
+
 }
 
 
 
 .card_list_title{
     text-align: center;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 36px;
     font-family: sans-serif;
     padding-left: 50px;
-    padding-top: 100px;
-    padding-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 130px;
 }
 
 
