--- a/src/components/pages/home/News/News.module.css
+++ b/src/components/pages/home/News/News.module.css
@@ -3,7 +3,7 @@
     width:100%;
     height:auto;
     padding-bottom: 50px;
-    background-color: bisque;
+    background-color: #fa694f;
 }
 
 .news_container{
