--- a/src/components/pages/authors/Authors.module.css
+++ b/src/components/pages/authors/Authors.module.css
@@ -54,7 +54,7 @@
 
     padding-left: 9%;
     padding-right: 9%;
-    text-align: center;
+    text-align: left;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
