use webp + email link correct

--- a/src/components/pages/authors/Authors.module.css
+++ b/src/components/pages/authors/Authors.module.css
@@ -2,7 +2,7 @@
 
     min-height:900px;
     margin-top :-10px;
-    background-image: url('./../../../../public/pictures/author/authors-page-background-transparent.png');
+    background-image: url('./../../../../public/pictures/author/authors-page-background-transparent.webp');
 
 
 }
