book home page promo

--- a/src/components/pages/home/Home.module.css
+++ b/src/components/pages/home/Home.module.css
@@ -1,11 +1,11 @@
-.home {
+/* .home {
     background-image: url('../../../../public/pictures/home/homepage-background.webp');
     background-size: 2700px;
     padding-bottom: 120px;
     min-height: 600px;
 
 
-}
+} */
 
 .banner_add {
     width: 100%;
