converting files to webp

--- a/src/components/pages/send/Send.module.css
+++ b/src/components/pages/send/Send.module.css
@@ -1,5 +1,5 @@
 .send{
-    background-image: url('../../../../public/pictures/send/send-background.png');
+    background-image: url('../../../../public/pictures/send/send-background.webp');
     padding-top:80px;
     padding-bottom: 70px;
 }
