--- a/src/components/pages/home/Promo/Promo.module.css
+++ b/src/components/pages/home/Promo/Promo.module.css
@@ -32,17 +32,19 @@
     float: left;
     position: absolute;
     top: 57%;
-    left:40vw;
-    right: 23vw;
-    bottom: 19vw;  
+    left:55vw;
+    right: 22vw;
+    bottom: 20vw;  
     display: flex;
+    flex-direction: column;
     justify-content: center;
     
    
 }
 .banner_button {
-    height: 50px;
-    width: 200px;
+    height: 100%;
+    width: 100%;
+
 
     font-weight: 700;
     font-size: 16px;
@@ -50,7 +52,6 @@
     border-radius: 5px;
     box-shadow: 0px 4px 4px rgba(0.2, 0, 0.2, 0.45);
     background-color: white;
-    position: absolute;
     
 }
 
@@ -187,11 +188,7 @@
     .download_text {
         font-size: 14px;
     }
-    .banner_button {
-        height: 40px;
-        width: 150px;
-
-    }
+    
     .banner_button_text {
         position: relative;
         line-height:40px;
@@ -216,11 +213,7 @@
     .content_button {
         width: 200px;
     }
-    .banner_button {
-        height: 30px;
-        width: 110px;
-
-    }
+  
     .banner_button_text {
         position: relative;
         line-height:30px;
