--- a/src/components/pages/team/Team.module.css
+++ b/src/components/pages/team/Team.module.css
@@ -1,59 +1,110 @@
-.team_title_container{
-    width:100%;
-    height:100px;
-    background-color: rgb(16, 80, 105);
+.team {
+    background: url('../../../../public/pictures/team/team-background.webp');
+
+    min-height: 900px;
+    background-size: 100vw;
+    padding-bottom: 100px;
+
+}
+
+.team_container {
+
+    margin: 0 auto;
+    width: 700px;
+}
+.team_title {
+    padding-top: 1rem;
+    font-size: 1.7rem;
+    font-weight: 600;
+    margin-bottom: 3rem;
     text-align: center;
-    display: flex;
-    align-items:center;
-    justify-content:center;
 }
-.team_title{
-    font-size: 36px;
-    font-weight: 200;
-    line-height: 56px;
-    letter-spacing: 2px;
-    color: white;
+.team_content {
+    display:grid;
 }
 
-.team_member_block{
-    margin: 0 auto 100px auto;
+.book_thumbail_image_container {
+    margin-top: 0.2rem;
+    width: 100%;
+    height: 100%;
 
+}
+.book_thumbail_image {
+    width: 6rem;
+}
+
+.teamMemberItem {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     text-align: left;
-    width: 900px;
-    max-width: 100%;
-    font-family: barlow-medium, barlow, sans-serif
-}
-
-.member_item{
-    margin-left:10px;
-    margin-right: 10px;
-}
-.leadership_title{
-    margin-left: 10px;
-    font-size: 26px;
-    font-weight: 100;
-    margin-top: 40px;
-    color: rgb(111, 118, 199);
-}
 
 
-.member_name{
-    margin-top: 30px;
-    font-size: 24px;
-    color: rgb(28, 180, 149);
-    font-weight: 200;
-    letter-spacing: 2px;
-    line-height: 32px;
 }
-.member_role{
-    font-size: 16px;
-    color:rgb(19, 67, 122);
-    margin-top: 5px;
+.teamMemberItem_content_header:hover {
+    cursor: pointer;
 }
-.member_info{
-    font-size: 16px;
+.teamMember_description:hover {
+    cursor: pointer;
+}
+
+.teamMember_image {
+    width: 7rem;
+    height: 7rem;
+    object-fit: cover;
+    border-radius: 50%;
     
-    margin-top: 10px;
 
+}
+.teamMemberItem_content_container { 
+    padding: 0rem 1.4rem 0 1.4rem;
+}
+.teamMember_name {
+    font-weight: 600;
+    font-size: 1.2rem;
+    line-height: 1rem;
+}
+.teamMember_position {
+    font-size: 0.8rem;
+    font-weight: 600
+}
+.teamMember_description {
+    font-size: 0.9rem;
+    font-weight: 600;
+    hyphens: auto;
+    margin-bottom: 0.5rem;
+}
 
+.link_icon {
+    width: 1.2rem;
+    height: 1.2rem;
+    padding-top: 0.5rem;
+    margin-right: 0.5rem;
+
+}
+.teamMember_links {
+    display:flow-root
+}
+.teamMember_link {
+    display: flex;
+    align-items: center;
+
+}
+
+.link {
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    align-items: center;
+    margin-bottom: 0.1rem;
+
+}
+.link:visited{
+    text-decoration: none;
+
+}
+
+@media only screen and (max-width: 750px) {
+    .team_container {
+        width: 90%;
+    }
 }
