--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -187,3 +187,9 @@
         margin-top: 20px;
     }
 }
+@media only screen and (max-width:520px){
+    .form_container{
+  
+        width: auto;
+    }
+}
