converted to webp

--- a/src/components/pages/contests/Contests.module.css
+++ b/src/components/pages/contests/Contests.module.css
@@ -1,5 +1,5 @@
 .contests {
-    background-image: url("../../../../public/pictures/contests/contest-background.png");
+    background-image: url("../../../../public/pictures/contests/contest-background.webp");
     min-height: 1000px;
     width: 100%;
     background-size: cover;
