--- a/src/components/pages/contests/contestsShowcase/ContestsShowcase.module.css
+++ b/src/components/pages/contests/contestsShowcase/ContestsShowcase.module.css
@@ -1,5 +1,5 @@
 .contests_showcase {
-    background-image: url("../../../../../public/pictures/contests/contest-background.png");
+    background-image: url("../../../../../public/pictures/contests/contest-background.webp");
     min-height: 1000px;
     width: 100%;
     background-size: cover;
