--- a/src/components/pages/contact/Contact.module.css
+++ b/src/components/pages/contact/Contact.module.css
@@ -2,6 +2,7 @@
 .contact_container_container {
     background-color: #6fc3db;
     min-height: 600px;
+    
 }
 .contact_container{
 
@@ -11,6 +12,7 @@
     grid-template-columns: auto 1fr;
     width: auto;
     padding-left: 5rem;
+    transition: all .5s ease-in-out;
     
 }
 .contact_header{
