--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -74,3 +74,15 @@
     color: rgb(99, 107, 163);
     cursor: pointer;
 }
+
+#sidebar .sb_nav_list_container{
+    display: none;
+}
+
+
+@media only screen and (max-width: 420px) {
+    #sidebar .sb_nav_list_container {
+        display: block;
+    }
+
+}
