--- a/src/components/pages/send/Send.module.css
+++ b/src/components/pages/send/Send.module.css
@@ -129,3 +129,15 @@
 
 
 }
+@media only screen and (max-width: 500px) {
+    .list_item_image {
+        width: 250px;
+    }
+    .list_item {
+        padding: 15px;
+        font-size:  18px;
+    }
+    .title{
+        padding-bottom: 2rem ;
+    }
+}
