--- a/src/components/pages/TermsAndConditions/TermsAndConditions.module.css
+++ b/src/components/pages/TermsAndConditions/TermsAndConditions.module.css
@@ -25,7 +25,7 @@
     padding-bottom: 1rem;
     
     background-color: #EDD6CC;
-    border-radius:  0px 0px 70px 0px;
+    border-radius:  0px 0px 60px 0px;
     filter: drop-shadow(0px 18px 29px rgba(0, 0, 0, 0.288));
 
     display: flex;
@@ -33,7 +33,7 @@
     justify-content: start;
 
 
-    padding: 6rem;
+    padding: 6rem 6rem 0rem 6rem;
     box-sizing: border-box;
 }
 .title{
@@ -194,6 +194,8 @@
     }
     .title {
         font-size: 3rem;
+        line-height: 3rem;
+        margin-bottom: 1.5rem;
     }
     .document {
         width: 120px;
@@ -221,8 +223,8 @@
     .document_container {
         padding: 4rem 2rem;
         justify-content: start;
-        
     }
+
 }
 
 @media only screen and (max-width: 450px ) {
