--- a/src/components/pages/TermsAndConditions/TermsAndConditions.module.css
+++ b/src/components/pages/TermsAndConditions/TermsAndConditions.module.css
@@ -60,7 +60,7 @@
     padding-left: 3rem;
 }
 
-.descirption_image {
+.description_image {
     height: 308px;
     width: 337px;
 
@@ -70,7 +70,7 @@
     border-radius: 0px 0px 0px 75px;
     filter: drop-shadow(0px 18px 29px rgba(0, 0, 0, 0.288));
 }
-.descirption_image_item {
+.description_image_item {
     width: 100%;
     height: 100%;
 
@@ -178,7 +178,7 @@
 
 
 @media only screen and (max-width: 1200px) {
-    .descirption_image {
+    .description_image {
         height: 230px;
         width: 240px;
     }
@@ -241,7 +241,7 @@
         font-size: 1rem;
         padding-left: 1rem;
     }
-    .descirption_image {
+    .description_image {
         height: 200px;
         width: 200px;
     }
