--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -53,6 +53,12 @@
 .logo_item{
     margin-top:5px;
     width:110px;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    caret-color: transparent;
 }
 
 .logo_texts{
