--- a/src/components/pages/adminPage/authorsAdmin/authorsAdmin.module.css
+++ b/src/components/pages/adminPage/authorsAdmin/authorsAdmin.module.css
@@ -13,6 +13,7 @@
     width: 100%;
     overflow: hidden;
     margin-bottom: 35px;
+    caret-color: transparent;
 
 }
 
@@ -23,6 +24,7 @@
     object-fit: cover;
     object-position: 50% 50%;
     border-radius: 50%;
+    caret-color: transparent;
 
 }
 .delete_item{
