--- a/src/components/pages/publication/Publication.module.css
+++ b/src/components/pages/publication/Publication.module.css
@@ -2,6 +2,7 @@
     text-align: left;
     margin-left: 20px;
     margin-right: 20px;
+    min-height: 700px;
 }
 .top_container{
     height:auto;
