--- a/src/components/pages/publication/Publication.module.css
+++ b/src/components/pages/publication/Publication.module.css
@@ -121,7 +121,7 @@
     padding-top: 10px;
 }
 .donation_reminder_container{
-    padding: 20px 1% 
+    padding:30px 0% 
 }   
 .donation_reminder_box {
     background-color: #f5f5f5;
@@ -131,7 +131,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 5px;
-    text-align: center;
+    text-align: left;
 }
 
 .donation_reminder_link{
