--- a/src/components/pages/contact/ContactForm/ContactForm.module.css
+++ b/src/components/pages/contact/ContactForm/ContactForm.module.css
@@ -1,10 +1,8 @@
 .contactForm {
-    padding-top: 1.5rem;
+    box-sizing: border-box;
     text-align: left;
     font-size: 1.1rem;
     width: 18rem;
-    
-
 }
 
 .sumbitted_message {
@@ -21,6 +19,7 @@
     color: #061a20;
     font-weight: 500;
 }
+
 .input {
     margin-top: 0.4rem;
     outline: none;
@@ -31,7 +30,6 @@
     margin-bottom: 1rem;
     box-shadow: inset 0 0 10px #0000006b;
 }
-
 
 .message_input {
     resize: none;
@@ -57,13 +55,21 @@
     color: white;
     font-size: 1.3rem;
 }
+
 .submit_button:hover {
     background-color: #0c84a6;
     cursor: pointer;
 }
+
+.submit_button:disabled {
+    background-color: #a0aec0;
+    cursor: not-allowed;
+}
+
 :root {
     --duration: 5s;
-  }
+}
+
 .error_message {
     color: rgb(148, 44, 44);
     font-size: 1rem;
@@ -72,9 +78,9 @@
     -moz-animation: inAndOut var(--duration) ease-in forwards;
     -webkit-animation: inAndOut var(--duration) ease-in forwards;
     animation: inAndOut var(--duration) ease-in forwards;
-
     transition: mex-height 2s;
 }
+
 @keyframes inAndOut {
     0% {
       opacity: 0;
@@ -88,16 +94,14 @@
     100% {
       opacity: 0;
     }
-  }
+}
 
-  .error_hidden {
+.error_hidden {
     max-height: 0;
     transition: max-height 10s;
-
-  }
+}
 
 @media only screen and (max-width: 770px) {
-
     .sumbitted_message {
         padding-bottom: 100px;
     }
