--- a/src/components/pages/send/Send.module.css
+++ b/src/components/pages/send/Send.module.css
@@ -83,19 +83,18 @@
     margin: 0;
     padding: 0;
     background: none;
-    color: #da5505;
+    color: rgb(137, 68, 146);
     border-radius: 0;
     font-size: 20px;
     font-family: barlow-medium, barlow, sans-serif;
     font-weight: 600;
     text-align: center;
-    text-decoration: underline;
     transition: color 0.2s;
     box-shadow: none;
+    text-decoration: none;
     cursor: pointer;
 }
 .style_guide_link:hover {
-    color: #b94400;
     text-decoration: underline;
     background: none;
     box-shadow: none;
@@ -130,6 +129,7 @@
 .mail_link{
     text-decoration: none;
     color: rgb(137, 68, 146);
+    font-weight: 500;
 }
 .mail_link:hover{
     text-decoration: underline;
